Fix snippet background color, on copy-to-clipboard, in dark mode.

--- a/web/appengine/static/default/css/programming-idioms.css
+++ b/web/appengine/static/default/css/programming-idioms.css
@@ -1688,7 +1688,9 @@ em {
 		background-color: #101010;
 		color: #7A7;
 	}
+
 	.implementation .piimports.just-copied-to-clipboard pre > code,
+	.implementation.just-copied-to-clipboard .picode pre,
 	.implementation.just-copied-to-clipboard .picode pre > code {
 		background-color: #101010;
 	}
